--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,9 +9,9 @@ html, body {
   border: 2px solid #303030;
 }
 
-.cc-notif-div
+.cc-notif-time
 {
-  border-left: 2px solid #bbb;
+  font-size: 12px;
 }
 .cc-notif-action-span
 {
@@ -23,4 +23,75 @@ html, body {
 .cc-notif-action-span:hover
 {
   color:blue;
+}
+
+.widget
+ {
+	position: relative;
+	clear: both;
+	width: auto;
+	margin-bottom: 2em;
+	overflow: hidden;
+}
+
+.widget-header
+{
+	position: relative;
+	height: 40px;
+	line-height: 40px;
+
+	background: #0088CC;
+	background:-moz-linear-gradient(top, #0088CC 0%, #0088CC 100%); /* FF3.6+ */
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#0088CC), color-stop(100%,#0088CC)); /* Chrome,Safari4+ */
+	background:-webkit-linear-gradient(top, #0088CC 0%,#0088CC 100%); /* Chrome10+,Safari5.1+ */
+	background:-o-linear-gradient(top, #0088CC 0%,#E9E9E9 100%); /* Opera11.10+ */
+	background:-ms-linear-gradient(top, #0088CC 0%,#E9E9E9 100%); /* IE10+ */
+	background:linear-gradient(top, #0088CC 0%,#0088CC 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088CC', endColorstr='#0088CC');
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088CC', endColorstr='#0088CC')";
+
+	border: 1px solid #D5D5D5;
+
+	-webkit-border-top-left-radius: 4px;
+	-webkit-border-top-right-radius: 4px;
+	-moz-border-radius-topleft: 4px;
+	-moz-border-radius-topright: 4px;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+
+	-webkit-background-clip: padding-box;
+}
+
+.widget-header h3
+ {
+	position: relative;
+	top: -7px;
+	left: 0px;
+	display: inline-block;
+	margin-right: 3em;
+	font-size: 18px;
+	font-weight: 800;
+	color: white;
+	line-height: 18px;
+}
+
+.widget-header [class^="icon-"], .widget-header [class*=" icon-"]
+ {
+	display: inline-block;
+	margin-left: 13px;
+	margin-right: -2px;
+
+	font-size: 16px;
+	color: white;
+	vertical-align: middle;
+}
+
+.widget-content
+{
+	padding: 20px 15px 15px;
+	background: #FFF;
+	border: 1px solid #D5D5D5;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
 }
